--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="clock">
-        <div class="hand hour"></div>
-        <div class="hand minute"></div>
-        <div class="hand second"></div>
+        <div class="hand hour" id="hh" data-hour-hand></div>
+        <div class="hand minute" id="mm" data-minute-hand></div>
+        <div class="hand second" id="ss" data-second-hand></div>
 
         <div class="number number1">1</div>
         <div class="number number2">2</div>
